<resources>
    <string name="app_name">Habitchain</string>
    <string name="channel_name">Habit Reminders</string>
    <string name="channel_description">Notifications for habit reminders</string>
    <string name="habit_name">Name</string>
    <string name="hint_name">Habit Name</string>
    <string name="icon_amp_color_text"><![CDATA[Icon & Color]]></string>
    <string name="goal_amp_goal_period_text"><![CDATA[Goal & Goal Period]]></string>
    <string name="units_text">units</string>
    <string name="slash">/</string>
    <string name="track_during_text">Track During</string>
    <string name="reminders_text">Reminders</string>
    <string name="add_reminder_text">Add Reminder</string>
    <string name="reminder_message_text">Reminder message</string>
    <string name="complete_text">Complete</string>
    <string name="enter_progress_text">Enter progress</string>
    <string name="update_progress_text">Update Progress</string>
    <string name="new_habit_text">New Habit</string>
    <string name="today_text">Today</string>
    <string name="habits_text">Habits</string>
    <string name="all_text">All</string>
    <string name="sign_up_text">Don\'t have an account? Sign up</string>
    <string name="login_text">LOGIN</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="login_screen_text">Login to your account</string>
    <string name="welcome_back_text">Welcome Back</string>
    <string name="register_text">Register</string>
    <string name="username_text">Username</string>
    <string name="email_address_text">Email address</string>
    <string name="confirm_password_text">Confirm password</string>
    <string name="register_text_uppercase">REGISTER</string>
    <string name="already_have_an_account_login_text">Already have an account? Login</string>
    <string name="logout_text">Logout</string>
    <string name="started_text">Started</string>
    <string name="completed_text">Completed</string>
    <string name="not_done_text">Not Done</string>
    <string name="add_habit_text">Tap "+" to add a habit.</string>
    <string name="enter_progress">Enter progress</string>
    <string name="icon_amp_color"><![CDATA[Icon & Color]]></string>
    <string name="icon">Icon</string>
    <string name="color">Color</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
</resources>