<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large">

        <TextView
            android:id="@+id/textViewCategoryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/textViewHabitNameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewHabitNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toTopOf="@id/editTextHabitName"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextHabitName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@id/textViewHabitNameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewIconColorLabel" />

        <TextView
            android:id="@+id/textViewIconColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/icon_amp_color_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextHabitName" />

        <LinearLayout
            android:id="@+id/layoutIconColorSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/textViewIconColorLabel">

            <FrameLayout
                android:id="@+id/frameLayoutIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/bg_icon_selector">

                <ImageView
                    android:id="@+id/imageViewSelectedIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center" />
            </FrameLayout>

            <View
                android:id="@+id/viewSelectedColor"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_color_selector" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewGoalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/goal_amp_goal_period_text"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutIconColorSelection" />

        <LinearLayout
            android:id="@+id/layoutGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/textViewGoalLabel">

            <EditText
                android:id="@+id/editTextGoal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_background"
                android:inputType="number"
                android:padding="@dimen/padding_medium" />

            <EditText
                android:id="@+id/editTextUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_weight="1"
                android:background="@drawable/edit_text_background"
                android:hint="@string/units_text"
                android:padding="@dimen/padding_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:text="@string/slash"
                android:textSize="@dimen/text_size_medium" />

            <Spinner
                android:id="@+id/spinnerGoalPeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewTrackDuringLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/track_during_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutGoal" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupTrackDuring"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTrackDuringLabel" />

        <TextView
            android:id="@+id/textViewRemindersLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/reminders_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroupTrackDuring" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupReminders"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRemindersLabel" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabAddReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:backgroundTint="@color/pink"
            android:text="@string/add_reminder_text"
            app:icon="@android:drawable/ic_input_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroupReminders" />

        <EditText
            android:id="@+id/editTextReminderMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/reminder_message_text"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fabAddReminder" />

        <Button
            android:id="@+id/buttonComplete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:backgroundTint="@color/pink"
            android:text="@string/complete_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextReminderMessage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>